[package]
name = "xvmath"
version = "0.1.0-beta.2"
authors = ["atil"]
edition = "2018"
description = "simd vector math library"
license = "MIT"
repository = "https://github.com/atkurtul/xvmath"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1.18"

[lib]
name = "xvmath"
