[package]
name = "xvmath"
version = "0.1.23"
authors = ["atil"]
edition = "2018"
description = "simd vector math library"
license = "MIT"
repository = "https://github.com/atkurtul/xvmath"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xvmath"

[[bin]]
name = "xvmath"
path = "src/main.rs"

[dependencies.xvmath]
paste = "0.1.18"